# openparsec

./: .clang-format  CMakeLists.txt  README.md
docs/: todo.txt
parsec_root/client/: planet.con  readme.txt
parsec_root/server/: _f1_2.con  _f2_2.con  _f3_2.con  _f4_2.con  _f5_2.con  _f6_2.con  _f7_2.con  _f8_2.con  boot_sv.con  settings.con
src/: CMakeLists.txt
src/libparsec/: CMakeLists.txt  e_relist.cpp  g_emp.cpp  g_telep.cpp  net_node.cpp  net_stream.cpp  net_util.cpp  obj_clas.cpp  obj_cust.cpp  obj_odt.cpp  sys_file.cpp
src/libparsec/include/: config.h  e_relist.h  g_extra.h  net_defs.h  net_node.h  net_util.h  od_odt.h
src/libraries/: CMakeLists.txt
src/libraries/glew/: glew.h  wglew.h
src/libraries/stb_image/: stb_image.h
src/parsec/: CMakeLists.txt  aud_bkgn.cpp  con_ext.cpp  con_info.cpp  con_list.cpp  con_say.cpp  e_color.cpp  g_boot.cpp  g_bot_cl.cpp  g_laser.cpp  g_planet.cpp  g_shkwav.cpp  g_stgate.cpp  g_vapor.cpp  m_option.cpp  net_game.cpp  net_game_gmsv.cpp  net_game_peer.cpp  net_glob.cpp  net_gmsv.cpp  net_peer.cpp  net_rmev.cpp  net_rmev_gmsv.cpp  net_serv.cpp  net_udp.cpp  nl_udp.cpp  part_ani.cpp  ro_obj.cpp  sl_main.cpp  sl_opt.cpp  vid_init.cpp
src/parsec/include/: con_info.h  inp_keyn.h  inp_sdl.h  net_game.h  net_game_peer.h  net_serv.h  net_subh.h  net_udpdf.h  vid_glob.h
src/parsec_server/: CMakeLists.txt  MasterServer.cpp  MasterServerItem.cpp  con_com_sv.cpp  con_main_sv.cpp  e_connmanager.cpp  e_gameserver.cpp  e_packethandler.cpp  inp_main_sv.cpp  net_packetdriver.cpp  net_util_sv.cpp  nl_udpdriver.cpp  sv_main.cpp
src/parsec_server/include/: MasterServer.h  MasterServerItem.h  e_connmanager.h  net_udpdriver.h  net_util_sv.h
tool_src/BspLib/: BspLib.vcproj
tool_src/QvLib/: QvLib.vcproj
tool_src/makeodt/: makeodt.sln  makeodt.vcproj
