include_directories("include")

add_library(parsecbase
con_arg.cpp
con_tab.cpp
con_vald.cpp
debug.cpp
e_modulemanager.cpp
e_relist.cpp
g_emp.cpp
g_extra.cpp
g_telep.cpp
net_pckt_gmsv.cpp
net_stream.cpp
net_swap.cpp
net_util.cpp
net_wrap.cpp
obj_clas.cpp
obj_creg.cpp
obj_cust.cpp
obj_odt.cpp
obj_type.cpp
sl_path.cpp
sl_timer.cpp
sw_path.cpp
sw_timer.cpp
sys_date.cpp
sys_file.cpp
sys_swap.cpp
utl_bsp.cpp
utl_clip.cpp
utl_clpo.cpp
utl_cull.cpp
utl_logfile.cpp
utl_math2.cpp
utl_math.cpp
)
